--- a/src/main/resources/templates/edit-employee-form.html
+++ b/src/main/resources/templates/edit-employee-form.html
@@ -42,7 +42,7 @@
       <input type="email" th:field="*{email}" id="email" class="form-control" placeholder="Enter email" required>
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Add Employee</button>
+      <button type="submit" class="btn btn-primary">Update Employee</button>
     </div>
   </form>
 </div>
