--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <meta charset="UTF-8">
     <title>Home</title>
-</head>
 <body>
         <h1>Home Page</h1>
 </body>
