--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Home</title>
     <meta charset="UTF-8">
@@ -57,6 +58,7 @@
             color: #fff;
             font-size: 16px;
             cursor: pointer;
+            margin-top: 10px;
         }
 
         button:hover {
@@ -77,6 +79,14 @@
         <p><strong>Email:</strong> <span th:text="${employee.email}"></span></p>
     </div>
 
+    <div sec:authorize="hasRole('ADMIN') or hasRole('MANAGER')">
+        <a th:href="@{/employees/table}">
+            <button type="button">Employees Table</button>
+        </a>
+    </div>
+
+
+    <!-- Logout button -->
     <form th:action="@{/logout}" method="post">
         <button type="submit">Logout</button>
     </form>
